style.css
@font-face {
  font-family: 'Pixelify';
  src: URL('assets/fonts/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf') format('truetype');
}
@font-face {
  font-family: 'Roboto';
  src: URL('assets/fonts/Roboto/Roboto-Regular.ttf') format('truetype');
}

:root{
  --navbar-yellow: #fff6d1;
  --navbar-orange: #df684d;
  --games-green: #80b878;
}

html {
  scroll-behavior: smooth;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Lato", "Arial", sans-serif;
}

/* HEADINGS */

h1 {
  font-size: 2.2rem;
}

h2 {
  color: #000;
  font-size: 1.3rem;
  text-align: center;
  line-height: 1.4;
  margin-bottom: 10px;
}

/* BASIC SETUP */

.page-wrapper {
  width: 100%;
  height: auto;
}
/* NAVIGATION */

.navbar {
  width: 100%;
  height: 50px;
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
  background-color: var(--navbar-yellow);
  z-index: 10000;
  display: grid;
  grid-template-columns: 1fr 3fr;
  align-items: center;
  overflow: hidden;
}

.navbar img {
  height: 25px;
  width: auto;
  justify-self: start;
  margin-left: 20px;
}

.navbar ul {
  list-style: none;
  display: flex;
  justify-self: end;
}
.nav-item a {
  color: #000;
  padding: 15px;
  font-size: 1.2rem;
  font-weight: 400;
  text-decoration: none;
  text-transform: uppercase;
  display: block;
  transition: color 0.3s ease-out;
}

.nav-item a:hover {
  color: var(--navbar-orange);
}

/* SECTIONS */

.headline {
  width: 100%;
  height: 85vh;
  min-height: 350px;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

@media (max-width: 600px) {
  .headline {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)),
      url('assets/heading-1280.webp'); /* 640x360 */
  }
}

@media (min-width: 601px) and (max-width: 1200px) {
  .headline {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)),
      url('assets/heading-2560.webp'); /* 1920x1080 */
  }
}

@media (min-width: 1201px) {
  .headline {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)),
      url('assets/heading-3840.webp'); /* 3840x2160 */
  }
}

.headline h1 {
  margin-bottom: 20px;
  color: #fff;
  text-align: center;
  line-height: 1.4;
  font-weight: 600;
  font-size: 3rem;
}
.headline p {
  color: #fff;
  text-align: center;
  line-height: 1.4;
  font-size: 1.4rem;
}

.about-us {
  width: 100%;
  height: auto;
  padding: 5% 20%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
}
.about-us h1 {
  text-transform: uppercase;
  margin-bottom: 20px;
  font-weight: 600;
  font-size: 2rem;
  font-family: "Roboto", Arial, sans-serif;
}

.about-us p {
  padding-top: 10px;
  font-size: 1.2rem;
  line-height: 1.6;
}

.about-us img {
  height: 40vh;
  padding-top: 25px;
}

.games {
  background-color: var(--games-green);
  color: #fff;
  padding-top: 3%;
}
.games h1{
  justify-content: center;
  display: flex;
  margin-bottom: 1%;
  text-transform: uppercase;
}

gc-game {
  display: flex;
  gap: 50px;
  flex-direction: row;
  width: 100%;
  height: auto;
  padding: 25px 20%;
}

gc-game:nth-child(odd) {
  flex-direction: row-reverse;
}

.team-container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 5% 0 0 0;
}

.team-container h1{
  justify-content: center;
  display: flex;
  margin-bottom: 1%;
  text-transform: uppercase;
}

.team-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
  gap: 20px;
}

gc-team {
  padding: 20px;
  border-radius: 10px;
  transition: transform 0.2s ease;
}

gc-team:hover {
  transform: scale(1.1);
}



/* MOBILE MENU & ANIMATION */

.menu-toggle .bar {
  width: 25px;
  height: 3px;
  background-color: #000;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.menu-toggle {
  justify-self: end;
  margin-right: 25px;
  display: none;
}

.menu-toggle:hover {
  cursor: pointer;
}

#mobile-menu.is-active .bar:nth-child(2) {
  opacity: 0;
}

#mobile-menu.is-active .bar:nth-child(1) {
  -webkit-transform: translateY(8px) rotate(45deg);
  -ms-transform: translateY(8px) rotate(45deg);
  -o-transform: translateY(8px) rotate(45deg);
  transform: translateY(8px) rotate(45deg);
}

#mobile-menu.is-active .bar:nth-child(3) {
  -webkit-transform: translateY(-8px) rotate(-45deg);
  -ms-transform: translateY(-8px) rotate(-45deg);
  -o-transform: translateY(-8px) rotate(-45deg);
  transform: translateY(-8px) rotate(-45deg);
}

/* Media Queries */

/* Mobile Devices - Phones/Tablets */

@media only screen and (max-width: 1080px) {
  .about-us {
    width: 100%;
    height: auto;
    padding: 20px 10%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }
  .about-us h1 {
    text-transform: uppercase;
    margin-bottom: 15px;
    font-weight: 600;
    font-size: 1.5rem;
    font-family: "Roboto", Arial, sans-serif;
    text-align: center;
  }

  .about-us p {
    padding-top: 10px;
    font-size: 1rem;
    line-height: 1.5;
  }

  .about-us img {
    height: 25vh;
    padding-top: 25px;
  }
}

@media only screen and (max-width: 720px) {
  gc-game,
  gc-game:nth-child(odd) {
    flex-direction: column-reverse;
    gap: 20px;
    padding: 20px;
  }

  /* MOBILE HEADINGS */

  .headline h1 {
    margin-bottom: 20px;
    font-weight: 600;
    font-size: 2rem;
  }
  .headline p {
    font-size: 1.5rem;
  }

  h1 {
    font-size: 1.9rem;
  }

  h2 {
    font-size: 1rem;
  }

  p {
    font-size: 0.8rem;
  }

  /* MOBILE NAVIGATION */

  .navbar ul {
    display: flex;
    flex-direction: column;
    position: fixed;
    justify-content: start;
    top: 50px;
    background-color: var(--navbar-yellow);
    width: 100%;
    height: 100vh;
    transform: translate(-101%);
    text-align: center;
    overflow: hidden;
  }

  .navbar li {
    padding: 15px;
  }

  .navbar li:first-child {
    margin-top: 50px;
  }

  .navbar li a {
    font-size: 1.5rem;
    font-weight: 600;
  }

  .menu-toggle,
  .bar {
    display: block;
    cursor: pointer;
  }

  .mobile-nav {
    transform: translate(0%) !important;
  }

  /* SECTIONS */

  .headline {
    height: 20vh;
  }
}

.footer{
  background: var(--navbar-orange);
  font-family: 'Play', sans-serif;
  text-align:center;
  }

  .footer svg{
    background-color: #fff;
  }

  .footer .row{
  width:100%;
  margin:1% 0;
  padding:0.6% 0;
  color:#fff;
  font-size:0.8em;
  }
  
  .footer-content .row:nth-child(4) {
    margin: 0;
  }
  .footer .row a{
  text-decoration:none;
  color:#fff;
  transition:0.5s;
  }
  
  .footer .row a:hover{
    color: var(--navbar-yellow);
  }
  
  .footer .row ul{
    width:100%;
  }
  
  .footer .row ul li{
    display:inline-block;
    margin:0px 30px;
  }
  
  .footer .row a i{
    font-size:2em;
    margin:0 1%;
  }

  .footer .row .footer-gameover{
    font-family: 'Pixelify', Arial, sans-serif;
    text-transform: uppercase;
    font-size: 5rem;
    font-weight: 300;
  }
  
  @media (max-width:720px){
    .footer-content{
      text-align:left;
      padding:5%;
    }
    .footer .row .footer-gameover{
      font-size: 2.4rem;
    }
    .footer .row ul li{
      display:block;
      margin:10px 0px;
      text-align:left;
    }
    .footer .row a i{
      margin:0 3%;
    }
  } 

